@@ -28,13 +28,22 @@ allprojects {
     version = '3.3-SNAPSHOT'
     ext.junitVersion = "4.11"
     ext.springVersion = "3.2.8.RELEASE"
-    ext.jasperReportVersion = "5.6.1"
+    ext.jasperReportVersion = "6.1.1"
     ext.groovyVersion = "2.3.3"
     ext."signing.keyId" = signing_keyId
     ext."signing.secretKeyRingFile" = signing_secretKeyRingFile
     ext."signing.password" = signing_password
 }
 
+configure(subprojects.findAll {['core', 'examples', 'docs'].contains(it.name)}) {
+    repositories {
+        mavenLocal()
+        mavenCentral()
+        maven {url "http://dev.mapfish.org/maven/repository"}
+        maven {url "http://download.osgeo.org/webdav/geotools"}
+        maven {url "http://jasperreports.sourceforge.net/maven2"}
+    }
+}
 configure(subprojects.findAll {['core', 'examples'].contains(it.name)}) {
     apply plugin: 'java'
     apply plugin: 'findbugs'
@@ -45,12 +54,6 @@ configure(subprojects.findAll {['core', 'examples'].contains(it.name)}) {
 
     jar.dependsOn(checkstyleMain, findbugsMain)
 
-    repositories {
-        mavenLocal()
-        mavenCentral()
-        maven {url "http://dev.mapfish.org/maven/repository"}
-        maven {url "http://download.osgeo.org/webdav/geotools"}
-    }
     checkstyle {
         configFile = file("$rootProject.rootDir/checkstyle_checks.xml")
         configProperties = ['basedir': project.rootDir.path]
@@ -59,8 +62,14 @@ configure(subprojects.findAll {['core', 'examples'].contains(it.name)}) {
     }
     checkstyleTest.enabled = false
 
+    String fullVersion = System.getProperty("java.specification.version");
+    String findbugsToolVersion = "3.0.1"
+    if (fullVersion.startsWith("1.6")) {
+        findbugsToolVersion = "2.0.3"
+    }
+
     findbugs {
-        toolVersion = "2.0.3"
+        toolVersion = findbugsToolVersion
         ignoreFailures = false
         reportsDir = file("$project.buildDir/reports/findbugsReports")
         effort = "max"
@@ -84,6 +93,9 @@ configure(subprojects.findAll {['core', 'examples'].contains(it.name)}) {
     }
 
     test {
+        jvmArgs '-XX:MaxPermSize=256m', '-XX:+UseConcMarkSweepGC', '-XX:+CMSClassUnloadingEnabled'
+        minHeapSize = "128m"
+        maxHeapSize = "512m"
         testLogging {
             exceptionFormat = 'full'
         }
